# computer_vision

./: .gitignore  README.md
01_px_processing/: README.md
02_detection/: CMakeLists.txt  README.md  connected_components.cpp  connected_components.hpp  detection.cpp  moment.cpp  moment.hpp  pca.cpp  pca.hpp  region.cpp  region.hpp  region_properties.cpp  region_properties.hpp  wall.cpp
02_detection/pxfuncs/: thresholding.cpp
03_canny/: CMakeLists.txt  README.md  canny.cpp  convolution.hpp  kernels.cpp  proc.cpp  proc.hpp
04_mosaicking/: README.md  homography.asv  mosaicking.asv  mosaicking.m
unit_1/: CMakeLists.txt  histeq.cpp  histeq.hpp  test.cpp  unit_1.cpp
unit_1/functions/: erosion.cpp  erosion.hpp  floodfill.cpp  floodfill.hpp  floodfill_f.cpp  floodfill_f.hpp  histeq.cpp  histeq.hpp  morpho.cpp  pixelfuncs.hpp  thresholding.cpp
